apps/vikunja/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tasks.ramoneees.com`)
      kind: Rule
      services:
        - name: vikunja
          port: 3456
  tls:
    secretName: wildcard-ramoneees-com-tls
